--- a/clase--10/src/views/index.handlebars
+++ b/clase--10/src/views/index.handlebars
@@ -1,2 +1,3 @@
 <h1>Hola Mundo!</h1>
+<script src="https://cdn.socket.io/4.7.3/socket.io.min.js" integrity="sha384-+miq58Ltmjm+SSP5g8Ok6dpMO/6R4n8xe/x1Yj0Bdb9kiEz25LTnWv/GZQTRQamg" crossorigin="anonymous"></script>
 <script src="js/index.js"></script>
