--- a/after--3--entrega/src/views/login.handlebars
+++ b/after--3--entrega/src/views/login.handlebars
@@ -1,11 +1,11 @@
-<h1>Login</h1>
-<form action="/api/users/login" method="POST">
+<h1>Inicio de Sesión </h1>
+<form class="formulario" action="/api/users/login" method="POST">
     <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
-    <br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
-    <br>
-    <button type="submit">Login</button>
+    <input type="email" class="inputMessi" id="email" name="email" required>
+    
+    <label for="password">Contraseña:</label>
+    <input type="password" class="inputMessi" id="password" name="password" required>
+    
+    <button type="submit" class="btnMios">Login</button>
     
 </form>
