--- a/after--3--entrega/src/views/products.handlebars
+++ b/after--3--entrega/src/views/products.handlebars
@@ -1,24 +1,40 @@
-<h1> Productos </h1>
-<p>CartID: {{cartId}} </p>
-{{#each productos}}
-<div>
-    <h2>{{title}}</h2>
-    <p> ID: {{id}} </p>
-    <p>{{description}}</p>
-    <p>Price: ${{price}}</p>
-    <p>Category: {{category}} </p>
-    <form action="/api/carts/{{../cartId}}/product/{{id}}" method="POST">
-        <button type="submit">Agregar al Carrito</button>
-    </form>
+<div class="d-flex justify-content-center align-items-center">
+  <h1 class="text-center">Productos</h1>
+  <a href="/carts/{{cartId}}" class="ms-5">
+    <i class="bi bi-cart cart-icon"></i>
+  </a>
+  
 </div>
-{{/each}}
+<div class="container">
+    <div class="row">
+        {{#each productos}}
+        <div class="card col-xl-4 col-md-6 col-sm-12">
+            <img src="{{img}}" alt="" class="card-img-top">
+            <div class="card-body">
+                <h2 class="card-title">{{title}}</h2>
+                <p class="card-text">{{description}}</p>
+                <p class="card-text">Price: ${{price}}</p>
+                <form action="/api/carts/{{../cartId}}/product/{{id}}" method="POST">
+                    <button class="btnMios" type="submit">Agregar al Carrito</button>
+                </form>
+            </div>
+        </div>
+        {{/each}}
+    </div>
+</div>
 
 
-{{#if hasPrevPage}}
-<a href="/products?page={{prevPage}}"> Anterior </a>
-{{/if}}
-{{#if hasNextPage}}
-<a href="/products?page={{nextPage}}"> Siguiente </a>
-{{/if}}
 
-<p>Pagina {{currentPage}} de {{totalPages}} </p>
+
+
+<div class="container mt-3">
+    <div class="row text-center"> <!-- Centra los enlaces horizontalmente -->
+        {{#if hasPrevPage}}
+        <a href="/products?page={{prevPage}}"> Anterior </a>
+        {{/if}}
+        {{#if hasNextPage}}
+        <a href="/products?page={{nextPage}}"> Siguiente </a>
+        {{/if}}
+        <p>Pagina {{currentPage}} de {{totalPages}} </p>
+    </div>
+</div>
