--- a/after--3--entrega/src/views/register.handlebars
+++ b/after--3--entrega/src/views/register.handlebars
@@ -1,19 +1,19 @@
 <h1>Registrarse</h1>
-<form action="/api/users/register" method="post">
-    <label for="first_name">First Name:</label>
-    <input type="text" id="first_name" name="first_name" required>
-    <br>
-    <label for="last_name">Last Name:</label>
-    <input type="text" id="last_name" name="last_name" required>
-    <br>
+<form class="formulario" action="/api/users/register" method="post">
+    <label for="first_name">Nombre:</label>
+    <input type="text" class="inputMessi" id="first_name" name="first_name" required>
+    
+    <label for="last_name">Apellido:</label>
+    <input type="text" class="inputMessi" id="last_name" name="last_name" required>
+    
     <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
-    <br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
-    <br>
-    <label for="age">Age:</label>
-    <input type="number" id="age" name="age" required>
-    <br>
-    <button type="submit">Register</button>
+    <input type="email" class="inputMessi" id="email" name="email" required>
+    
+    <label for="password">Contraseña:</label>
+    <input type="password" class="inputMessi" id="password" name="password" required>
+    
+    <label for="age">Edad:</label>
+    <input type="number" class="inputMessi" id="age" name="age" required>
+    
+    <button class="btnMios" type="submit">Register</button>
 </form>
